[package]
name = "voiceload"
version = "0.2.0"
edition = "2021"
authors = ["SilentE <silenteags@gmail.com>"]
description = "A simple cli tool for downloading audio in bilibili."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./", "vl"]

[dependencies]
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
clap = { version = "4.0.32", features = ["derive"] }
vl = { path = "./vl" }
anyhow = { version = "1.0", features = ["backtrace"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.23.0", features = ["rt-multi-thread"]}
log = "0.4"
simple_logger = "4.0.0"
regex = "1.7.0"
