[package]
name = "vl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["cookies", "stream"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bytes = "1.3.0"
futures = "0.3.25"
num_cpus = "1.0"
log = "0.4"